# omnizart

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: doc-build.yml  general.yml  publish.yml
docs/: Makefile
omnizart/: base.py  callbacks.py  io.py  utils.py
omnizart/chord/: app.py
omnizart/cli/: __init__.py
omnizart/feature/: beat_for_drum.py  cfp.py
omnizart/models/: chord_model.py  spectral_norm_net.py  t2t.py
omnizart/music/: losses.py
tests/beat/: test_app.py
tests/chord/: test_app.py
tests/drum/: test_app.py
tests/feature/: test_wrapper_func.py
tests/music/: test_app.py
tests/patch_cnn/: test_app.py
tests/vocal_contour/: test_app.py
