[tool.poetry]
name = "omnizart"
version = "0.5.0"
description = "Omniscient Mozart, being able to transcribe everything in the music."
readme = "README.md"
authors = ["BreezeWhite <miyashita2010@tuta.io>", "yjlolo <yjlolo125@gmail.com>"]
license = "MIT"
repository = "https://github.com/Music-and-Culture-Technology-Lab/omnizart"
documentation = "https://music-and-culture-technology-lab.github.io/omnizart-doc/"
homepage = "https://sites.google.com/view/mctl/home"
keywords = ["automatic music transcription", "drum transcription", "vocal transcription", "beat tracking"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",

]
exclude = ["weights*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = ">=7.1.2"
pretty_midi = ">=0.2.9"
librosa = ">=0.8.0"
madmom = ">=0.16.1"
pillow = ">=8.3.2"
pyyaml = ">=5.3.1"
jsonschema = ">=3.2.0"
tqdm = ">=4.49.0"
pyfluidsynth = ">=1.2.5"
vamp = ">=1.1.0"
mir_eval = ">=0.6"
tensorflow = ">=2.16"
tf-keras = ">=2.16"

[tool.poetry.extras]
spleeter = ["spleeter"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
flake8 = ">=5.0"
pylint = ">=2.5.3"
black = ">=22.0"
numpydoc = ">=1.1.0"
yapf = ">=0.30.0"
sphinx-press-theme = ">=0.5.1"
pytest-cov = ">=3.0"
pytest-mock = ">=3.3.1"
sphinx-click = ">=2.5.0"
sphinxcontrib-bibtex = ">=1.0.0"

[tool.poetry.scripts]
omnizart = 'omnizart.cli.cli:entry'

[tool.black]
line-length = 120
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
